files/manifests/watchtower/bazarr.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bazarr
  namespace: watchtower
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "0 1 * * *"
  labels:
    app: bazarr
    tier: watchtower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr
        tier: watchtower
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: movies
              mountPath: /movies
            - name: tv
              mountPath: /tv
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 6767
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 6767
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 250m
              memory: 500Mi
      restartPolicy: Always
      volumes:
        - name: config
          hostPath:
            path: /var/lib/bazarr
        - name: downloads
          hostPath:
            path: /hulkpool/downloads
        - name: movies
          hostPath:
            path: /hulkpool/movies
        - name: tv
          hostPath:
            path: /hulkpool/tv
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: ""
---
kind: Service
apiVersion: v1
metadata:
  name: bazarr
  namespace: watchtower
  labels:
    app: bazarr
    tier: watchtower
spec:
  selector:
    app: bazarr
  ports:
    - port: 6767
      protocol: TCP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: bazarr
  namespace: watchtower
  labels:
    app: bazarr
    tier: watchtower
spec:
  rules:
    - host: bazarr.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
