files/manifests/watchtower/flaresolverr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: watchtower
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "0 1 * * *"
  labels:
    app: flaresolverr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      restartPolicy: Always
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8191
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8191
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8191
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8191
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 300m
              memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: watchtower
  labels:
    app: flaresolverr
spec:
  selector:
    app: flaresolverr
  ports:
    - name: http
      port: 8191
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr
  namespace: watchtower
  labels:
    app: flaresolverr
spec:
  rules:
    - host: flaresolverr.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaresolverr
                port:
                  number: 8191
