files/manifests/watchtower/heimdall.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: heimdall
  namespace: watchtower
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "0 1 * * *"
  labels:
    app: heimdall
    tier: watchtower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: heimdall
        tier: watchtower
    spec:
      containers:
        - name: heimdall
          image: lscr.io/linuxserver/heimdall:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: config
              mountPath: /config
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 80
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 443
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 250m
              memory: 500Mi
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: heimdall
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: ""
---
kind: Service
apiVersion: v1
metadata:
  name: heimdall
  namespace: watchtower
  labels:
    app: heimdall
    tier: watchtower
spec:
  selector:
    app: heimdall
  ports:
    - name: http
      port: 80
      protocol: TCP
    - name: https
      port: 443
      protocol: TCP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: heimdall
  namespace: watchtower
  labels:
    app: heimdall
    tier: watchtower
spec:
  rules:
    - host: heimdall.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heimdall
                port:
                  number: 80
