files/manifests/watchtower/jackett.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jackett
  namespace: watchtower
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "0 1 * * *"
  labels:
    app: jackett
    tier: watchtower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jackett
        tier: watchtower
    spec:
      containers:
        - name: jackett
          image: ghcr.io/linuxserver/jackett:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 9117
          readinessProbe:
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 9117
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 1000Mi
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett
        - name: config-backup
          nfs:
            server: nexus.techn.is
            path: /var/lib/technis/jackett
        - name: localtime
          hostPath:
            path: /etc/localtime
---
kind: Service
apiVersion: v1
metadata:
  name: jackett
  namespace: watchtower
  labels:
    app: jackett
    tier: watchtower
spec:
  selector:
    app: jackett
  ports:
    - port: 9117
      protocol: TCP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jackett
  namespace: watchtower
  labels:
    app: jackett
    tier: watchtower
spec:
  rules:
    - host: jackett.k8s.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  number: 9117
