files/manifests/watchtower/lidarr.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: lidarr
  namespace: watchtower
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "0 1 * * *"
  labels:
    app: lidarr
    tier: watchtower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lidarr
        tier: watchtower
    spec:
      nodeSelector:
        kubernetes.io/hostname: nexus
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8686
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: music
              mountPath: /music
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 8686
          readinessProbe:
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 8686
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 250m
              memory: 500Mi
      restartPolicy: Always
      volumes:
        - name: config
          hostPath:
            path: /var/lib/technis/lidarr
        - name: downloads
          nfs:
            server: nexus.techn.is
            path: /hulkpool/downloads
        - name: music
          nfs:
            server: nexus.techn.is
            path: /hulkpool/music
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: ""
---
kind: Service
apiVersion: v1
metadata:
  name: lidarr
  namespace: watchtower
  labels:
    app: lidarr
    tier: watchtower
spec:
  selector:
    app: lidarr
  ports:
    - port: 8686
      protocol: TCP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: lidarr
  namespace: watchtower
  labels:
    app: lidarr
    tier: watchtower
spec:
  rules:
    - host: lidarr.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 8686
