files/manifests/watchtower/overseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: watchtower
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "0 1 * * *"
  labels:
    app: overseerr
    tier: watchtower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: overseerr
        tier: watchtower
    spec:
      containers:
        - name: overseerr
          image: ghcr.io/linuxserver/overseerr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /config
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 5055
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 5055
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 1000Mi
      restartPolicy: Always
      volumes:
        - name: config
          hostPath:
            path: /var/lib/overseerr
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: ""
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: watchtower
  labels:
    app: overseerr
    tier: watchtower
spec:
  selector:
    app: overseerr
  ports:
    - port: 5055
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: watchtower
  labels:
    app: overseerr
    tier: watchtower
spec:
  rules:
    - host: overseerr.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
