files/manifests/watchtower/plex.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: plex
  namespace: watchtower
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/match-tag: "true"
    keel.sh/pollSchedule: "0 1 * * *"
  labels:
    name: plex
    app: plex
    tier: watchtower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
        tier: watchtower
    spec:
      hostname: watchtower
      containers:
        - name: plex
          image: plexinc/pms-docker:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1900
              protocol: UDP
            - containerPort: 3005
            - containerPort: 8324
            - containerPort: 32400
            - containerPort: 32410
              protocol: UDP
            - containerPort: 32412
              protocol: UDP
            - containerPort: 32413
              protocol: UDP
            - containerPort: 32414
              protocol: UDP
            - containerPort: 32469
          volumeMounts:
            - name: config
              mountPath: /config
            - name: music
              mountPath: /data/music
            - name: movies
              mountPath: /data/movies
            - name: tv
              mountPath: /data/tvshows
            - name: transcode
              mountPath: /transcode
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 32400
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 32400
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
              nvidia.com/gpu: 1 # nvidia/k8s-device-plugin, scheduled onto host with exposed gpu
            limits:
              cpu: 2000m # out of 4 cores
              memory: 4Gi # out of 32GiB
              nvidia.com/gpu: 1
      restartPolicy: Always
      volumes: # using hostPath for performance
        - name: config
          hostPath:
            path: /var/lib/technis/plex
            type: Directory
        - name: music
          hostPath:
            path: /hulkpool/music
            type: Directory
        - name: movies
          hostPath:
            path: /hulkpool/movies
            type: Directory
        - name: tv
          hostPath:
            path: /hulkpool/tv
            type: Directory
        - name: transcode
          hostPath:
            path: /var/lib/technis/plex/transcode
            type: Directory
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: ""
---
kind: Service
apiVersion: v1
metadata:
  name: plex
  namespace: watchtower
  labels:
    app: plex
    tier: watchtower
spec:
  selector:
    app: plex
  type: NodePort # allows certain LAN devices direct access
  ports:
    - port: 32400
      protocol: TCP
      targetPort: 32400
      nodePort: 32400
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: plex
  namespace: watchtower
  labels:
    app: plex
    tier: watchtower
spec:
  rules:
    - host: plex.k8s.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
    - host: watchtower.technis.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
