files/manifests/watchtower/qbittorrent.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qbittorrent
  namespace: watchtower
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        kubernetes.io/hostname: nexus
      containers:
        - name: qbittorrent
          image: jovalle/qbittorrent-openvpn:v0.3.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6881
            - containerPort: 6881
              protocol: UDP
            - containerPort: 8080
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /config/qBittorrent/downloads
              name: downloads
            - name: tunnel
              mountPath: /dev/net/tun
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 5
            exec:
              command:
                - ping
                - "-c 1"
                - "-W 1"
                - 1.1.1.1
          readinessProbe:
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 8080
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 3Gi
      restartPolicy: Always
      volumes:
        - name: config
          hostPath:
            path: /var/lib/technis/qbittorrent
        - name: downloads
          hostPath:
            path: /hulkpool/downloads
        - name: tunnel
          hostPath:
            path: /dev/net/tun
            type: ""
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: ""
---
kind: Service
apiVersion: v1
metadata:
  name: qbittorrent
  namespace: watchtower
  labels:
    app: qbittorrent
spec:
  selector:
    app: qbittorrent
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: qbittorrent
  namespace: watchtower
  labels:
    app: qbittorrent
spec:
  rules:
    - host: qbittorrent.k8s.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
