files/manifests/watchtower/radarr.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr
  namespace: watchtower
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "0 1 * * *"
  labels:
    app: radarr
    tier: watchtower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
        tier: watchtower
    spec:
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: movies
              mountPath: /movies
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 7878
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 7878
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 1000Mi
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr
        - name: downloads
          nfs:
            server: illmatic.techn.is
            path: /mnt/hulkpool/downloads
        - name: movies
          nfs:
            server: illmatic.techn.is
            path: /mnt/hulkpool/movies
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: ""
---
kind: Service
apiVersion: v1
metadata:
  name: radarr
  namespace: watchtower
  labels:
    app: radarr
    tier: watchtower
spec:
  selector:
    app: radarr
  ports:
    - port: 7878
      protocol: TCP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: radarr
  namespace: watchtower
  labels:
    app: radarr
    tier: watchtower
spec:
  rules:
    - host: radarr.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
