files/manifests/watchtower/sonarr.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sonarr
  namespace: watchtower
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "0 1 * * *"
  labels:
    app: sonarr
    tier: watchtower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
        tier: watchtower
    spec:
      nodeSelector:
        kubernetes.io/hostname: nexus
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: downloads
              mountPath: /config/qBittorrent/downloads
            - name: tv
              mountPath: /tv
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 8989
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 8989
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 1000Mi
      restartPolicy: Always
      volumes:
        - name: config
          hostPath:
            path: /var/lib/technis/sonarr
        - name: downloads
          hostPath:
            path: /var/lib/technis/sonarr
            path: /hulkpool/downloads
        - name: tv
          hostPath:
            path: /var/lib/technis/sonarr
            path: /hulkpool/tv
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: ""
---
kind: Service
apiVersion: v1
metadata:
  name: sonarr
  namespace: watchtower
  labels:
    app: sonarr
    tier: watchtower
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
      protocol: TCP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: sonarr
  namespace: watchtower
  labels:
    app: sonarr
    tier: watchtower
spec:
  rules:
    - host: sonarr.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
