files/manifests/watchtower/tautulli.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tautulli
  namespace: watchtower
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "0 1 * * *"
  labels:
    app: tautulli
    tier: watchtower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tautulli
        tier: watchtower
    spec:
      nodeSelector:
        kubernetes.io/hostname: nexus
      containers:
        - name: tautulli
          image: ghcr.io/linuxserver/tautulli:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8181
          volumeMounts:
            - name: config
              mountPath: /config
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 8181
          readinessProbe:
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 8181
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 500Mi
      restartPolicy: Always
      volumes:
        - name: config
          hostPath:
            path: /var/lib/technis/tautulli
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: ""
---
kind: Service
apiVersion: v1
metadata:
  name: tautulli
  namespace: watchtower
  labels:
    app: tautulli
    tier: watchtower
spec:
  selector:
    app: tautulli
  ports:
    - port: 8181
      protocol: TCP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: tautulli
  namespace: watchtower
  labels:
    app: tautulli
    tier: watchtower
spec:
  rules:
    - host: tautulli.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli
                port:
                  number: 8181
